[gd_scene load_steps=6 format=3 uid="uid://c03kl3upefrwr"]

[ext_resource type="Script" path="res://Scripts/WheelSpace/TutorialBunny.gd" id="1_raumu"]
[ext_resource type="Texture2D" uid="uid://be4glpbamx10l" path="res://Sprites/WheelSpace/Zundamon/zun_bubble.png" id="2_qlobe"]
[ext_resource type="Texture2D" uid="uid://cix21ro3ngcqh" path="res://Sprites/WheelSpace/Zundamon/zun_bubble_hover.png" id="3_nnt7q"]
[ext_resource type="Texture2D" uid="uid://btsdyf15q58f8" path="res://Sprites/WheelSpace/Zundamon/zun_wip.png" id="4_1spkk"]
[ext_resource type="Texture2D" uid="uid://cmnfooc2xd55c" path="res://Sprites/WheelSpace/tutorialbun.png" id="5_j61hj"]

[node name="TutorialBunny" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 769.0
offset_top = 269.0
offset_right = 916.0
offset_bottom = 331.0
script = ExtResource("1_raumu")

[node name="TextBubble" type="TextureButton" parent="."]
layout_mode = 2
offset_left = -170.0
offset_top = -120.0
offset_right = 129.0
offset_bottom = 179.0
scale = Vector2(0.55, 0.55)
texture_normal = ExtResource("2_qlobe")
texture_pressed = ExtResource("2_qlobe")
texture_hover = ExtResource("3_nnt7q")
texture_disabled = ExtResource("4_1spkk")
texture_focused = ExtResource("3_nnt7q")
flip_h = true

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -165.0
offset_top = -105.0
offset_right = -15.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "sdfsd"
autowrap_mode = 2

[node name="BunnySprite" type="Sprite2D" parent="."]
position = Vector2(11, 40)
texture = ExtResource("5_j61hj")
